# trunk

./: kaben_build_opts.txt
libs/qCC_glWindow/: ccGLWindow.cpp
plugins/: OpenNI2Support.cmake
plugins/qKinect/: LibfreenectSupport.cmake
plugins/qOpenNI2/: CMakeLists.txt  OpenNI2Support.cmake  qOpenNI2Plugin.cpp  qOpenNI2Plugin.h  qOpenNI2Plugin.qrc
plugins/qOpenNI2SimpleRead/: CMakeLists.txt  qOpenNI2SimpleReadPlugin.cpp  qOpenNI2SimpleReadPlugin.h  qOpenNI2SimpleReadPlugin.qrc
plugins/qOpenNI2SimpleView/: CMakeLists.txt  OpenNI2Dlg.ui  OpenNI2SimpleViewDlg.ui  ccOpenNI2Dlg.cpp  ccOpenNI2Dlg.h  ccOpenNI2FrameListener.cpp  ccOpenNI2FrameListener.h  ccOpenNI2SimpleViewDlg.cpp  ccOpenNI2SimpleViewDlg.h  ccOpenNI2SimpleViewFrameListener.cpp  ccOpenNI2SimpleViewFrameListener.h  ccOpenNI2SimpleViewStreamer.cpp  ccOpenNI2SimpleViewStreamer.h  qOpenNI2SimpleViewPlugin.cpp  qOpenNI2SimpleViewPlugin.h  qOpenNI2SimpleViewPlugin.qrc
qCC/: ccConsole.cpp
